@@ -1,6 +1,8 @@
 Version 3.3.x (2010-xx-xx)
 	Fixed bug where fullscreen plugin would add two editor instances to EditorManager collection.
 	Fixed bug where it was difficult to enter text on non western languages such as Japanese on IE.
+	Fixed bug where removing contents from nodes could result in an exception when using undo/redo.
+	Fixed bug with selection of images inside layers or other resizable containers on IE.
 Version 3.3.3 (2010-04-19)
 	Added new script_loaded callback function setting for the jQuery plugin.
 	Added various fixes and new rpc methods for the spellchecker plugin. Patch contributed by Michael Peters.
